# PiNet_MCP_Server

./: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  OPEN_WEBUI_SETUP.md  README.md  demo_tools.py  docker-compose-tailscale.yml  docker-compose.yml  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  SRS.md
src/mcp_pinet_server/: __init__.py  __main__.py  config.py  server.py
tests/: __init__.py  test_server.py
